SAK-51994 Scorm code improvements
https://sakaiproject.atlassian.net/browse/SAK-51994